[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.14"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = {version = "1.7", features = ["v4"]}


[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
