[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.14"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1.7", features = ["v4"] }


[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
once_cell = "1"
reqwest = "0.11"

[profile.release]
strip = true
